# geo-simulations

./: .env.template  .gitignore  .markdownlint.yaml  ATTRIBUTIONS.md  README.md  check.sh  localities.json.template  pyproject.toml  ruff.toml
.github/workflows/: test.yml
src/geo_simulations/: generate.py  geotiff_base.py  geotiff_convert.py  geotiff_metadata.py  logger.py  setup.py  utils.py  zombie_outbreak.py
tests/: test_geotiff_convert.py  test_geotiff_metadata.py
